安全/securityContext.yaml
# container security context
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  securityContext:  # pod level 
    fsGroup: 123
    supplementalGroups:
      - 3
    seLinuxOptions: # 一般不使用
      level: "ss:xx,xx"
  containers:
  - name: myapp
    image: <Image>
    securityContext:  # container level
      privileged: true  # 特权启动，以root启动可以理解为
      capabilities:  # 获取某些权限，privileged true 一般代表获取所有权限
        drop:
          - ALL  # 去除所有特权
      runAsGroup: 1337  # 以1337属组运行容器，istio在进行流量捕获的时候，有一条是1337的流量转发到envoy，就是这里实现，镜像中需要add user 1337
      runAsUser: 1337
      runAsNonRoot: true  # 不以root 运行
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
